<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayOptionsActivity" >

<!--     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" /> -->
    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/year_spinner" />
    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/month_spinner" />
    <Button 
        android:id="@+id/analyticsChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics_chart" 
        android:onClick="toDisplayChart"/>

</TableLayout>
