<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="0dp"
        android:minHeight="220dp" >
        
    <Button
        android:id="@+id/usageMenu"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="0.50"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/your_usage"
        android:onClick="secondDetailPage" />

     <Button
        android:id="@+id/bestPlanMenu"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="0.50"
         android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/your_best_plan"
        android:onClick="secondDetailPage" />
     
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minHeight="220dp">
    <Button
        android:id="@+id/alarmsMenu"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="0.50"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/set_alarm"
        android:onClick="secondDetailPage" />
    
    <Button
        android:id="@+id/billPayMenu"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="0.50"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/bill_pay"
        android:onClick="secondDetailPage" />
    
    </TableRow>

</TableLayout>