<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsageScreenActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    
    <Button
        android:id="@+id/calls_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:padding="50dp"
        android:onClick="sendMessage"
        android:text="@string/calls_text" />

     <Button
         android:id="@+id/sms_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.03"
         android:padding="50dp"
         android:onClick="sendMessage"
         android:text="@string/sms_text" />
      
      <Button
          android:id="@+id/data_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.03"
          android:padding="50dp"
          android:onClick="sendMessage"
          android:text="@string/data_text" />
      
  <!--      <Button
        android:id="@+id/bestplan_button"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bestplan_text"
        android:onClick="sendMessage" /> -->
       
</TableLayout>
